Add syntax highlighter previewer

--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
 		/>
 		%sveltekit.head%
 	</head>
-	<body>
-		<div id="svelte">%sveltekit.body%</div>
+	<body class="h-full">
+		<div id="svelte" class="h-full">%sveltekit.body%</div>
 	</body>
 </html>
